versions/0.9.0/_sources/refs/_aws-cdk_aws-applicationautoscaling.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"bJXQ16V+a7hjkHFs4nBd/IFV8XsMK+S8EatBRTdHbN0="}

@aws-cdk/aws-applicationautoscaling
===================================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.ApplicationAutoScaling/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.ApplicationAutoScaling" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.ApplicationAutoScaling --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.ApplicationAutoScaling" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/applicationautoscaling/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:applicationautoscaling:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="applicationautoscaling" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>applicationautoscaling</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:applicationautoscaling:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='applicationautoscaling', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-applicationautoscaling/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-applicationautoscaling@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-applicationautoscaling": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-applicationautoscaling@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-applicationautoscaling/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-applicationautoscaling@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-applicationautoscaling": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-applicationautoscaling@0.9.0



.. mdinclude:: ./__aws-cdk_aws-applicationautoscaling.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-applicationautoscaling

ScalableTargetId
^^^^^^^^^^^^^^^^

.. py:class:: ScalableTargetId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ApplicationAutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.applicationautoscaling.ScalableTargetId;

      .. code-tab:: javascript

         const { ScalableTargetId } = require('@aws-cdk/aws-applicationautoscaling');

      .. code-tab:: typescript

         import { ScalableTargetId } from '@aws-cdk/aws-applicationautoscaling';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ScalingPolicyArn
^^^^^^^^^^^^^^^^

.. py:class:: ScalingPolicyArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ApplicationAutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.applicationautoscaling.ScalingPolicyArn;

      .. code-tab:: javascript

         const { ScalingPolicyArn } = require('@aws-cdk/aws-applicationautoscaling');

      .. code-tab:: typescript

         import { ScalingPolicyArn } from '@aws-cdk/aws-applicationautoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-applicationautoscaling.cloudformation

ScalableTargetResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalableTargetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ApplicationAutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalableTargetResource;

      .. code-tab:: javascript

         const { cloudformation.ScalableTargetResource } = require('@aws-cdk/aws-applicationautoscaling');

      .. code-tab:: typescript

         import { cloudformation.ScalableTargetResource } from '@aws-cdk/aws-applicationautoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ScalableTargetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScalableTargetResource``
   :type properties: :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalableTargetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-applicationautoscaling.ScalableTargetId` *(readonly)*

   .. py:class:: ScalableTargetActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalableTargetResource.ScalableTargetActionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalableTargetResource.ScalableTargetActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalableTargetResource.ScalableTargetActionProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: maxCapacity

         ``ScalableTargetResource.ScalableTargetActionProperty.MaxCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scalabletargetaction.html#cfn-applicationautoscaling-scalabletarget-scalabletargetaction-maxcapacity


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: minCapacity

         ``ScalableTargetResource.ScalableTargetActionProperty.MinCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scalabletargetaction.html#cfn-applicationautoscaling-scalabletarget-scalabletargetaction-mincapacity


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ScheduledActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalableTargetResource.ScheduledActionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalableTargetResource.ScheduledActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalableTargetResource.ScheduledActionProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: schedule

         ``ScalableTargetResource.ScheduledActionProperty.Schedule``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scheduledaction.html#cfn-applicationautoscaling-scalabletarget-scheduledaction-schedule


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: scheduledActionName

         ``ScalableTargetResource.ScheduledActionProperty.ScheduledActionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scheduledaction.html#cfn-applicationautoscaling-scalabletarget-scheduledaction-scheduledactionname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: endTime

         ``ScalableTargetResource.ScheduledActionProperty.EndTime``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scheduledaction.html#cfn-applicationautoscaling-scalabletarget-scheduledaction-endtime


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or date or undefined


      .. py:attribute:: scalableTargetAction

         ``ScalableTargetResource.ScheduledActionProperty.ScalableTargetAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scheduledaction.html#cfn-applicationautoscaling-scalabletarget-scheduledaction-scalabletargetaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalableTargetResource.ScalableTargetActionProperty` or undefined


      .. py:attribute:: startTime

         ``ScalableTargetResource.ScheduledActionProperty.StartTime``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalabletarget-scheduledaction.html#cfn-applicationautoscaling-scalabletarget-scheduledaction-starttime


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or date or undefined



ScalableTargetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalableTargetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ApplicationAutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalableTargetResourceProps;

      .. code-tab:: javascript

         // cloudformation.ScalableTargetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ScalableTargetResourceProps } from '@aws-cdk/aws-applicationautoscaling';





   .. py:attribute:: maxCapacity

      ``AWS::ApplicationAutoScaling::ScalableTarget.MaxCapacity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-maxcapacity


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: minCapacity

      ``AWS::ApplicationAutoScaling::ScalableTarget.MinCapacity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-mincapacity


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: resourceId

      ``AWS::ApplicationAutoScaling::ScalableTarget.ResourceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-resourceid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: roleArn

      ``AWS::ApplicationAutoScaling::ScalableTarget.RoleARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: scalableDimension

      ``AWS::ApplicationAutoScaling::ScalableTarget.ScalableDimension``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-scalabledimension


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: serviceNamespace

      ``AWS::ApplicationAutoScaling::ScalableTarget.ServiceNamespace``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-servicenamespace


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: scheduledActions

      ``AWS::ApplicationAutoScaling::ScalableTarget.ScheduledActions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalabletarget.html#cfn-applicationautoscaling-scalabletarget-scheduledactions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalableTargetResource.ScheduledActionProperty`)[] or undefined


ScalingPolicyResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPolicyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ApplicationAutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource;

      .. code-tab:: javascript

         const { cloudformation.ScalingPolicyResource } = require('@aws-cdk/aws-applicationautoscaling');

      .. code-tab:: typescript

         import { cloudformation.ScalingPolicyResource } from '@aws-cdk/aws-applicationautoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ScalingPolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScalingPolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-applicationautoscaling.ScalingPolicyArn` *(readonly)*

   .. py:class:: CustomizedMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: metricName

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.MetricName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-customizedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-customizedmetricspecification-metricname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: namespace

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-customizedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-customizedmetricspecification-namespace


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: statistic

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Statistic``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-customizedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-customizedmetricspecification-statistic


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: dimensions

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Dimensions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-customizedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-customizedmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResource.MetricDimensionProperty`)[] or undefined


      .. py:attribute:: unit

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Unit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-customizedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-customizedmetricspecification-unit


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: MetricDimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource.MetricDimensionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.MetricDimensionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.MetricDimensionProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: name

         ``ScalingPolicyResource.MetricDimensionProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-metricdimension.html#cfn-applicationautoscaling-scalingpolicy-metricdimension-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: value

         ``ScalingPolicyResource.MetricDimensionProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-metricdimension.html#cfn-applicationautoscaling-scalingpolicy-metricdimension-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: PredefinedMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: predefinedMetricType

         ``ScalingPolicyResource.PredefinedMetricSpecificationProperty.PredefinedMetricType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-predefinedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-predefinedmetricspecification-predefinedmetrictype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: resourceLabel

         ``ScalingPolicyResource.PredefinedMetricSpecificationProperty.ResourceLabel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-predefinedmetricspecification.html#cfn-applicationautoscaling-scalingpolicy-predefinedmetricspecification-resourcelabel


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: StepAdjustmentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource.StepAdjustmentProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.StepAdjustmentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.StepAdjustmentProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: scalingAdjustment

         ``ScalingPolicyResource.StepAdjustmentProperty.ScalingAdjustment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustment.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustment-scalingadjustment


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: metricIntervalLowerBound

         ``ScalingPolicyResource.StepAdjustmentProperty.MetricIntervalLowerBound``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustment.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustment-metricintervallowerbound


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: metricIntervalUpperBound

         ``ScalingPolicyResource.StepAdjustmentProperty.MetricIntervalUpperBound``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustment.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustment-metricintervalupperbound


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: StepScalingPolicyConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource.StepScalingPolicyConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.StepScalingPolicyConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.StepScalingPolicyConfigurationProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: adjustmentType

         ``ScalingPolicyResource.StepScalingPolicyConfigurationProperty.AdjustmentType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-adjustmenttype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: cooldown

         ``ScalingPolicyResource.StepScalingPolicyConfigurationProperty.Cooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-cooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: metricAggregationType

         ``ScalingPolicyResource.StepScalingPolicyConfigurationProperty.MetricAggregationType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-metricaggregationtype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: minAdjustmentMagnitude

         ``ScalingPolicyResource.StepScalingPolicyConfigurationProperty.MinAdjustmentMagnitude``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-minadjustmentmagnitude


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: stepAdjustments

         ``ScalingPolicyResource.StepScalingPolicyConfigurationProperty.StepAdjustments``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration-stepadjustments


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResource.StepAdjustmentProperty`)[] or undefined


   .. py:class:: TargetTrackingScalingPolicyConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ApplicationAutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty } from '@aws-cdk/aws-applicationautoscaling';





      .. py:attribute:: targetValue

         ``ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty.TargetValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration-targetvalue


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: customizedMetricSpecification

         ``ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty.CustomizedMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration-customizedmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty` or undefined


      .. py:attribute:: disableScaleIn

         ``ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty.DisableScaleIn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration-disablescalein


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: predefinedMetricSpecification

         ``ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty.PredefinedMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration-predefinedmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty` or undefined


      .. py:attribute:: scaleInCooldown

         ``ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty.ScaleInCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration-scaleincooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: scaleOutCooldown

         ``ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty.ScaleOutCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration-scaleoutcooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ScalingPolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPolicyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ApplicationAutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.applicationautoscaling.cloudformation.ScalingPolicyResourceProps;

      .. code-tab:: javascript

         // cloudformation.ScalingPolicyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ScalingPolicyResourceProps } from '@aws-cdk/aws-applicationautoscaling';





   .. py:attribute:: policyName

      ``AWS::ApplicationAutoScaling::ScalingPolicy.PolicyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-policyname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: policyType

      ``AWS::ApplicationAutoScaling::ScalingPolicy.PolicyType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-policytype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: resourceId

      ``AWS::ApplicationAutoScaling::ScalingPolicy.ResourceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-resourceid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: scalableDimension

      ``AWS::ApplicationAutoScaling::ScalingPolicy.ScalableDimension``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-scalabledimension


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: scalingTargetId

      ``AWS::ApplicationAutoScaling::ScalingPolicy.ScalingTargetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-scalingtargetid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: serviceNamespace

      ``AWS::ApplicationAutoScaling::ScalingPolicy.ServiceNamespace``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-servicenamespace


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: stepScalingPolicyConfiguration

      ``AWS::ApplicationAutoScaling::ScalingPolicy.StepScalingPolicyConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-stepscalingpolicyconfiguration


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResource.StepScalingPolicyConfigurationProperty` or undefined


   .. py:attribute:: targetTrackingScalingPolicyConfiguration

      ``AWS::ApplicationAutoScaling::ScalingPolicy.TargetTrackingScalingPolicyConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-applicationautoscaling-scalingpolicy.html#cfn-applicationautoscaling-scalingpolicy-targettrackingscalingpolicyconfiguration


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-applicationautoscaling.cloudformation.ScalingPolicyResource.TargetTrackingScalingPolicyConfigurationProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-applicationautoscaling

